refactor(auth.controller.ts): fully migrate to DI
