# swagger.json
@@ -7,67 +7,6 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
-			"UserModel": {
-				"properties": {
-					"oauthId": {
-						"type": "string",
-						"nullable": true
-					},
-					"oauthProvider": {
-						"type": "string",
-						"enum": [
-							"NONE",
-							"FACEBOOK",
-							"GOOGLE"
-						]
-					},
-					"picture": {
-						"type": "string",
-						"nullable": true
-					},
-					"password": {
-						"type": "string",
-						"nullable": true
-					},
-					"lastName": {
-						"type": "string"
-					},
-					"firstName": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					},
-					"updatedAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"createdAt": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"isActive": {
-						"type": "boolean"
-					},
-					"id": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"oauthId",
-					"oauthProvider",
-					"picture",
-					"password",
-					"lastName",
-					"firstName",
-					"email",
-					"updatedAt",
-					"createdAt",
-					"isActive",
-					"id"
-				],
-				"type": "object"
-			},
 			"LocalRegisterInput": {
 				"properties": {
 					"lastName": {
@@ -115,85 +54,6 @@
 		"contact": {}
 	},
 	"paths": {
-		"/health-check": {
-			"get": {
-				"operationId": "HealthCheck",
-				"responses": {
-					"200": {
-						"description": "OK",
-						"content": {
-							"application/json": {
-								"schema": {
-									"properties": {
-										"refreshToken": {
-											"properties": {
-												"revokedAt": {
-													"type": "string",
-													"format": "date-time"
-												},
-												"expiresAt": {
-													"type": "string",
-													"format": "date-time"
-												},
-												"ipAddress": {
-													"type": "string"
-												},
-												"userAgent": {
-													"type": "string"
-												},
-												"userId": {
-													"type": "string"
-												},
-												"token": {
-													"type": "string"
-												},
-												"updatedAt": {
-													"type": "string",
-													"format": "date-time"
-												},
-												"createdAt": {
-													"type": "string",
-													"format": "date-time"
-												},
-												"id": {
-													"type": "string"
-												}
-											},
-											"required": [
-												"revokedAt",
-												"expiresAt",
-												"ipAddress",
-												"userAgent",
-												"userId",
-												"token",
-												"updatedAt",
-												"createdAt",
-												"id"
-											],
-											"type": "object"
-										},
-										"user": {
-											"$ref": "#/components/schemas/UserModel"
-										}
-									},
-									"required": [
-										"refreshToken",
-										"user"
-									],
-									"type": "object"
-								}
-							}
-						}
-					}
-				},
-				"description": "Simple health check endpoint",
-				"tags": [
-					"Health"
-				],
-				"security": [],
-				"parameters": []
-			}
-		},
 		"/auth/register": {
 			"post": {
 				"operationId": "Register",
@@ -320,6 +180,29 @@
 						}
 					}
 				}
+			}
+		},
+		"/health-check": {
+			"get": {
+				"operationId": "HealthCheck",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"description": "Simple health check endpoint",
+				"tags": [
+					"Health"
+				],
+				"security": [],
+				"parameters": []
 			}
 		}
 	},
